HMAN-98 Fix test breaking in pipeline?