@@ -10,6 +10,7 @@ import uk.gov.hmcts.reform.hmc.model.hmi.CaseClassification;
 import uk.gov.hmcts.reform.hmc.model.hmi.HmiCaseDetails;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -67,7 +68,7 @@ class HmiCaseDetailsMapperTest {
             .caseInterpreterRequiredFlag(false)
             .caseRestrictedFlag(true)
             .caseVersionId(1)
-            .caseLinks(hmiCaseDetailsMapper.getCaseLinksArray(List.of(caseDetails.getCaseDeepLink())))
+            .caseLinks(hmiCaseDetailsMapper.getCaseLinksArray(Arrays.asList(caseDetails.getCaseDeepLink())))
             .casePublishedName(caseDetails.getPublicCaseName())
             .caseAdditionalSecurityFlag(Boolean.TRUE)
             .linkedHearingGroupStatus(REQUIRED)
@@ -89,6 +90,7 @@ class HmiCaseDetailsMapperTest {
         caseDetails.setCaseInterpreterRequiredFlag(false);
         caseDetails.setCaseRestrictedFlag(true);
         caseDetails.setHmctsServiceCode(SERVICE_CODE);
+        caseDetails.setCaseDeepLink("wow.woweee.wow/wow");
         CaseClassification caseClassification = CaseClassification.builder()
             .caseClassificationService(SERVICE_CODE)
             .caseClassificationType("CategoryValue1")
@@ -107,7 +109,7 @@ class HmiCaseDetailsMapperTest {
             .caseInterpreterRequiredFlag(false)
             .caseRestrictedFlag(true)
             .caseVersionId(1)
-            .caseLinks(hmiCaseDetailsMapper.getCaseLinksArray(List.of(caseDetails.getCaseDeepLink())))
+            .caseLinks(hmiCaseDetailsMapper.getCaseLinksArray(Arrays.asList(caseDetails.getCaseDeepLink())))
             .casePublishedName(caseDetails.getPublicCaseName())
             .caseAdditionalSecurityFlag(Boolean.FALSE)
             .linkedHearingGroupStatus(NOT_REQUIRED)
